# edat

./: CMakeLists.txt  README.md  example.edat  simple.edat
include/: edat.h  parsers.h
samples/: CMakeLists.txt  visitall.cpp
src/: CMakeLists.txt  parsers.cpp
